<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/one_time_alarm"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnOnceDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_baseline_date_range_24" />

    <TextView
        android:id="@+id/tvOnceDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tanggal_alarm"
        app:layout_constraintBottom_toBottomOf="@+id/btnOnceDate"
        app:layout_constraintStart_toEndOf="@+id/btnOnceDate"
        app:layout_constraintTop_toTopOf="@+id/btnOnceDate" />

    <ImageButton
        android:id="@+id/btnOnceTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btnOnceDate"
        app:srcCompat="@drawable/ic_baseline_access_time_24" />

    <TextView
        android:id="@+id/tvOnceTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/waktu"
        app:layout_constraintBottom_toBottomOf="@+id/btnOnceTime"
        app:layout_constraintStart_toEndOf="@+id/btnOnceTime"
        app:layout_constraintTop_toBottomOf="@+id/btnOnceDate" />

    <EditText
        android:id="@+id/edtOnceMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/pesan_alarm"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btnOnceTime" />

    <Button
        android:id="@+id/btnSetOneTimeAlarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/set_one_time_alarm"
        app:layout_constraintEnd_toEndOf="@+id/edtOnceMessage"
        app:layout_constraintStart_toStartOf="@+id/edtOnceMessage"
        app:layout_constraintTop_toBottomOf="@+id/edtOnceMessage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/repeating_alarm"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSetOneTimeAlarm" />

    <ImageButton
        android:id="@+id/btnRepeatTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ic_baseline_access_time_24" />

    <TextView
        android:id="@+id/tvRepeatTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/repeating_time"
        app:layout_constraintBottom_toBottomOf="@+id/btnRepeatTime"
        app:layout_constraintStart_toEndOf="@+id/btnRepeatTime"
        app:layout_constraintTop_toTopOf="@+id/btnRepeatTime" />

    <EditText
        android:id="@+id/edtRepeatMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/pesan_alarm"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btnRepeatTime" />

    <Button
        android:id="@+id/btnSetRepeatAlarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/set_repeating_alarm"
        app:layout_constraintEnd_toEndOf="@+id/edtRepeatMessage"
        app:layout_constraintTop_toBottomOf="@+id/edtRepeatMessage" />

    <Button
        android:id="@+id/btnCancelRepeatingAlarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel_alarm"
        app:layout_constraintBottom_toBottomOf="@+id/btnSetRepeatAlarm"
        app:layout_constraintEnd_toStartOf="@+id/btnSetRepeatAlarm"
        app:layout_constraintStart_toStartOf="@+id/edtRepeatMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>